--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ SMTP_PASS="kqnm ksyf tvem hhwh"
 SMTP_PORT=465
 SMTP_SERVICE=gmail
 SMTP_HOST=smtp.gmail.com
+ACCESS_TOKEN_SECRET="6cb58c15e08951336f9e6a5e5a6b1608041047ff"
+REFRESH_TOKEN_SECRET="ac85a7eeb7ac359789c615c442a2eefb6ae5f8c0"
