--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "ioredis": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "next": "~15.2.4",
     "nodemailer": "^7.0.6",
     "prisma": "^6.16.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
@@ -32,6 +35,7 @@
     "@nx/express": "^21.5.3",
     "@nx/jest": "21.5.3",
     "@nx/js": "21.5.3",
+    "@nx/next": "^21.5.3",
     "@nx/node": "21.5.3",
     "@nx/web": "21.5.3",
     "@nx/webpack": "21.5.3",
