feat(user-ui) install nextjs

--- a/nx.json
+++ b/nx.json
@@ -88,5 +88,13 @@
         "^build"
       ]
     }
+  },
+  "generators": {
+    "@nx/next": {
+      "application": {
+        "style": "tailwind",
+        "linter": "none"
+      }
+    }
   }
 }
