--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -5,8 +5,10 @@
     "emitDeclarationOnly": true,
     "importHelpers": true,
     "isolatedModules": true,
-    "baseUrl":".",
-    "lib": ["es2022"],
+    "baseUrl": ".",
+    "lib": [
+      "es2022"
+    ],
     "module": "nodenext",
     "moduleResolution": "nodenext",
     "noEmitOnError": true,
@@ -17,9 +19,13 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "es2022",
-    "customConditions": ["@eshop/source"],
-    "paths":{
-      "@packages/*": ["packages/*"]
+    "customConditions": [
+      "@eshop/source"
+    ],
+    "paths": {
+      "@packages/*": [
+        "packages/*"
+      ]
     }
   }
 }
