--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "@prisma/client": "^6.16.2",
+    "@tanstack/react-query": "^5.90.2",
     "@upstash/redis": "^1.35.4",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
@@ -22,12 +23,14 @@
     "express-rate-limit": "^8.1.0",
     "ioredis": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.544.0",
     "morgan": "^1.10.1",
     "next": "~15.2.4",
     "nodemailer": "^7.0.6",
     "prisma": "^6.16.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.63.0",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
