--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.63.0",
+    "react-hot-toast": "^2.6.0",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
