--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-http-proxy": "^2.1.2",
     "express-rate-limit": "^8.1.0",
     "ioredis": "^5.8.0",
+    "jotai": "^2.15.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "morgan": "^1.10.1",
@@ -32,6 +33,8 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
+    "stripe": "^19.1.0",
+    "styled-components": "^6.1.19",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
