--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@imagekit/nodejs": "^7.1.1",
     "@prisma/client": "^6.17.1",
     "@tanstack/react-query": "^5.90.2",
     "@upstash/redis": "^1.35.4",
