--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@imagekit/nodejs": "^7.1.1",
     "@prisma/client": "^6.17.1",
     "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-table": "^8.21.3",
     "@upstash/redis": "^1.35.4",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
@@ -30,6 +31,7 @@
     "lucide-react": "^0.544.0",
     "morgan": "^1.10.1",
     "next": "~15.2.4",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -67,6 +69,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^20.19.9",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^7.0.1",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
