--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-quill-new": "^3.6.0",
     "stripe": "^19.1.0",
     "styled-components": "^6.1.19",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@nx/docker": "21.5.3",
