feat(kafka-service) import kafka, analystic service, trach-user action

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,14 @@
     {
       "path": "./apps/seller-ui"
     },
-
     {
       "path": "./apps/product-service"
+    },
+    {
+      "path": "./apps/kafka-service-e2e"
+    },
+    {
+      "path": "./apps/kafka-service"
     }
   ]
 }
