--- a/nx.json
+++ b/nx.json
@@ -39,7 +39,8 @@
         "targetName": "test"
       },
       "exclude": [
-        "apps/auth-service-e2e/**/*"
+        "apps/auth-service-e2e/**/*",
+        "apps/kafka-service-e2e/**/*"
       ]
     },
     {
