--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ioredis": "^5.8.0",
     "jotai": "^2.15.0",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "lucide-react": "^0.544.0",
     "morgan": "^1.10.1",
     "next": "~15.2.4",
@@ -47,13 +48,13 @@
   "devDependencies": {
     "@nx/docker": "21.5.3",
     "@nx/esbuild": "21.5.3",
-    "@nx/express": "^21.5.3",
+    "@nx/express": "21.6.5",
     "@nx/jest": "21.5.3",
-    "@nx/js": "21.5.3",
+    "@nx/js": "21.6.5",
     "@nx/next": "^21.5.3",
-    "@nx/node": "21.5.3",
+    "@nx/node": "21.6.5",
     "@nx/web": "21.5.3",
-    "@nx/webpack": "21.5.3",
+    "@nx/webpack": "21.6.5",
     "@nx/workspace": "21.5.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^8.0.1",
