--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
     "react-quill-new": "^3.6.0",
+    "react-range": "^1.10.0",
+    "react-zoom-pan-pinch": "^3.7.0",
     "stripe": "^19.1.0",
     "styled-components": "^6.1.19",
     "swagger-ui-express": "^5.0.1",
