--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "dev": "npx nx run-many --target=serve --all",
     "auth-docs": "node apps/auth-service/src/swagger.js",
+    "product-docs": "node apps/product-service/src/swagger.js",
     "user-ui": "npx nx run-many --target=dev --projects=user-ui",
     "seller-ui": "npx nx run-many --target=dev --projects=seller-ui",
-    "product-docs": "node apps/product-service/src/swagger.js"
+    "admin-ui" : "npx nx run-many --target=dev --projects=admin-ui"
   },
   "private": true,
   "dependencies": {
@@ -37,8 +38,8 @@
     "next": "~15.2.4",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
     "react-quill-new": "^3.6.0",
@@ -56,7 +57,7 @@
     "@nx/express": "21.6.5",
     "@nx/jest": "21.5.3",
     "@nx/js": "21.6.5",
-    "@nx/next": "^21.5.3",
+    "@nx/next": "21.6.5",
     "@nx/node": "21.6.5",
     "@nx/web": "21.6.5",
     "@nx/webpack": "21.6.5",
