--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "product-docs": "node apps/product-service/src/swagger.js",
     "user-ui": "npx nx run-many --target=dev --projects=user-ui",
     "seller-ui": "npx nx run-many --target=dev --projects=seller-ui",
-    "admin-ui" : "npx nx run-many --target=dev --projects=admin-ui"
+    "admin-ui": "npx nx run-many --target=dev --projects=admin-ui"
   },
   "private": true,
   "dependencies": {
@@ -29,6 +29,7 @@
     "express": "^4.21.2",
     "express-http-proxy": "^2.1.2",
     "express-rate-limit": "^8.1.0",
+    "framer-motion": "^12.23.25",
     "ioredis": "^5.8.0",
     "jotai": "^2.15.0",
     "jsonwebtoken": "^9.0.2",
@@ -45,6 +46,7 @@
     "react-quill-new": "^3.6.0",
     "react-range": "^1.10.0",
     "react-zoom-pan-pinch": "^3.7.0",
+    "recharts": "^3.5.1",
     "stripe": "^19.1.0",
     "styled-components": "^6.1.19",
     "swagger-ui-express": "^5.0.1",
