--- a/apps/user-ui/.env
+++ b/apps/user-ui/.env
@@ -4,3 +4,4 @@ NEXT_PUBLIC_STRIPE_PUBLIC_KEY=pk_test_51SHm3FLHu0bI6RxgbyqTrN44QhrGEmDxPiTSd6OYc
 
 NEXT_PUBLIC_SELLER_SERVER_URL=http://localhost:3001
 NEXT_PUBLIC_ADMIN_SERVER_URL=http://localhost:3002
+NEXT_PUBLIC_CHATTING_WEBSOCKET_URL=ws://localhost:6006
