--- a/apps/seller-ui/.env
+++ b/apps/seller-ui/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_SERVER_URL="http://localhost:8080"
 NEXT_PUBLIC_USER_UI_URL="http://localhost:3000"
+NEXT_PUBLIC_CHATTING_WEBSOCKET_URL=ws://localhost:6006
