maximize image, api call, database

--- a/apps/seller-ui/tsconfig.json
+++ b/apps/seller-ui/tsconfig.json
@@ -37,6 +37,7 @@
   "include": [
     "../../apps/seller-ui/.next/types/**/*.ts",
     "../../packages/**/*.ts",
+    "../../packages/**/*.tsx",
     "../../dist/apps/seller-ui/.next/types/**/*.ts",
     "next-env.d.ts",
     "src/**/*.js",
