--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vnedyalk0v/react19-simple-maps": "^1.2.1",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "browser-image-compression": "^2.0.2",
     "canvas-confetti": "^1.9.4",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
