refactor product service to clean architecture, fix login, fix product image

--- a/apps/product-service/tsconfig.app.json
+++ b/apps/product-service/tsconfig.app.json
@@ -12,6 +12,6 @@
   "include": [
     "src/**/*.ts",
     "../../packages/**/*.ts"
-  ],
+, "../../packages/components/rich-text-editor/index.tsx", "../../packages/components/size-selector/index.tsx"  ],
   "exclude": []
 }
