--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next": "~15.2.4",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
+    "qrcode": "^1.5.4",
     "react": "^19.2.1",
     "react-apexcharts": "^1.9.0",
     "react-dom": "^19.2.1",
@@ -91,6 +92,7 @@
     "@types/node": "^20.19.9",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^7.0.1",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@types/swagger-ui-express": "^4.1.8",
