--- a/apps/recommendation-service/tsconfig.app.json
+++ b/apps/recommendation-service/tsconfig.app.json
@@ -4,9 +4,11 @@
     "outDir": "dist",
     "types": [
       "node",
-      "express"
+      "express",
+      "jest"
     ],
     "rootDir": "src",
+    "esModuleInterop": true,
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo"
   },
   "include": [
